--- a/P009590.opf/meta.yml
+++ b/P009590.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P009590
+id: P009590
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1PD181178
   title: སྔ་འགྱུར་གཡག་ཟེ་དགོན་གྱི་འདོན་ཆ་ལས། རྟ་མགྲིན་དྲེགས་ཟིལ་གྱི་སྐོར།
-  volume: ''
   author: ''
+  volumes: {}
