--- a/P009590.opf/meta.yml
+++ b/P009590.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W1PD181178
   title: སྔ་འགྱུར་གཡག་ཟེ་དགོན་གྱི་འདོན་ཆ་ལས། རྟ་མགྲིན་དྲེགས་ཟིལ་གྱི་སྐོར།
   author: ''
-  volumes: {}
+  volumes:
+    a2c24ea1297847feb875d1eee80716fa:
+      image_group_id: I1KG16351
+      title: ''
+      volume_number: 1
+      total_pages: 408
