--- a/P009590.opf/layers/v001/Pagination.yml
+++ b/P009590.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 02be08b4b4094137bd6116783e20b75c
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   b98dc2d7d5c64e64bfaf893ef46f9a24:
