--- a/P009590.opf/meta.yml
+++ b/P009590.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P009590
 initial_creation_type: ocr
+created_at: 29/03/2020
+last_modified_at: 25/11/2021
 source_metadata:
   id: bdr:W1PD181178
   title: སྔ་འགྱུར་གཡག་ཟེ་དགོན་གྱི་འདོན་ཆ་ལས། རྟ་མགྲིན་དྲེགས་ཟིལ་གྱི་སྐོར།
